@@ -64,3 +64,4 @@ Thumbs.db
 
 # Avoid archives of this distribution
 \bDoh-v?[\d\.\_]+
+\bdocs/Projects
