@@ -9,7 +9,7 @@ Doh - An easy way to document a project using Markdown
 
 # Version
 
-This documents version v0.1.$Rev: 16 $ of [Doh](https://metacpan.org/module/Doh)
+This documents version v0.1.$Rev: 18 $ of [Doh](https://metacpan.org/module/Doh)
 
 # Description
 
