@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-08-18 22:27 pjf ;
+; @(#)$Ident: dist.ini 2013-08-21 13:27 pjf ;
 
 name              = Doh
 abstract          = An easy way to document a project using Markdown
@@ -53,8 +53,8 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Doh
 bugtracker.mailto = bug-Doh@rt.cpan.org
-;repository.url   = git://github.com/pjfl/Doh.git
-;repository.web   = http://github.com/pjfl/Doh
+;repository.url   = git://github.com/pjfl/p5-doh.git
+;repository.web   = http://github.com/pjfl/p5-doh
 ;repository.type  = git
 
 ; So apparently order matters
