@@ -1,9 +1,9 @@
-# @(#)Ident: Help.pm 2013-08-19 10:56 pjf ;
+# @(#)Ident: Help.pm 2013-08-20 17:12 pjf ;
 
 package Doh::Model::Help;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 17 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 18 $ =~ /\d+/gmx );
 
 use Class::Usul::Constants;
 use Class::Usul::Functions  qw( find_source );
@@ -41,6 +41,7 @@ sub load_page {
 sub _build_navigation {
    my $self     = shift;
    my $appclass = $self->config->appclass;
+   my $url      = $self->config->generator_url;
   (my $path     = find_source( $appclass )) =~ s{ \.pm }{}mx;
    my $io       = io( $path )->filter( sub { m{ (?: \.pm | \.pod ) \z }mx } );
    my $paths    = [ NUL, grep { not m{ \A (?: Model | View ) }mx }
@@ -51,7 +52,7 @@ sub _build_navigation {
 
    for my $class (@{ $classes }) {
       push @nav, { level => 0, name => $class, type => 'file',
-                   url   => "/help/${class}" };
+                   url   => "${url}/${class}" };
    }
 
    return \@nav;
