@@ -62,6 +62,7 @@ $AUTHOR_TESTING
 $AUTOMATED_TESTING
 $EXTENDED_TESTING
 $NONINTERACTIVE_TESTING
+$PERL_CPAN_REPORTER_CONFIG
 $PERL_CR_SMOKER_CURRENT
 $PERL5_CPANPLUS_IS_VERSION
 $TEST_CRITIC
