@@ -1,8 +1,8 @@
-# @(#)Ident: 10test_script.t 2013-08-18 22:12 pjf ;
+# @(#)Ident: 10test_script.t 2013-08-21 23:47 pjf ;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 17 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 18 $ =~ /\d+/gmx );
 use File::Spec::Functions   qw( catdir updir );
 use FindBin                 qw( $Bin );
 use lib                 catdir( $Bin, updir, 'lib' );
@@ -34,10 +34,6 @@ is $model->docs_url, '/Getting_Started', 'Docs url';
 #$self->usul->dumper( $stash );
 
 done_testing;
-
-#SKIP: {
-#   $reason and $reason =~ m{ \A tests: }mx and skip $reason, 1;
-#}
 
 # Local Variables:
 # mode: perl
