@@ -11,8 +11,7 @@
 [% IF config.repo_url -%]
 <a href="[% config.repo_url %]" target="_blank"
    id="github-ribbon" class="github-ribbon">
-   <img alt="Fork me on GitHub"
-        src="[% links.images %]fork-me.png"></a>
+   <img alt="Fork me on GitHub" src="[% links.images %]fork-me.png"></a>
 [% END -%]
 <div class="container-fluid fluid-height wrapper">
    <div class="row-fluid columns content">
